--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <header>
     <button id="home-btn">Home</button>
-    <button id="options-btn">Options</button>
+    <button id="menu-btn">Menu</button>
   </header>
-  <nav id="options-menu" class="hidden">
+  <nav id="menu" class="hidden">
     <ul>
       <li><a href="#" id="registrations-link">Registrations</a></li>
       <li><a href="#" id="news-link">News</a></li>
