--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
     <button id="menu-btn">Menu</button>
   </header>
   <nav id="menu" class="hidden">
-    <ul>
-      <li><a href="#" id="registrations-link">Registrations</a></li>
-      <li><a href="#" id="news-link">News</a></li>
-      <li><a href="#" id="health-link">Health and Safety</a></li>
+    <ul id="menu-items">
+      <!-- Menu items will be dynamically added here -->
     </ul>
   </nav>
   <main>
